Fixed spacing issues with "Will you?" action link

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -46,6 +46,10 @@
   text-align: center;
 }
 
+.edl-link__wrapper {
+  display: inline;
+}
+
 .edl-link {
   text-decoration: underline;
   color: var(--white);
@@ -65,6 +69,13 @@
   cursor: pointer;
 }
 /* Breakpoint */
+
+/* Prevent "Will you?" link from splitting across multiple lines */
+@media(min-width: 360px) and (max-width: 415px) {
+  .edl-link__wrapper {
+    display: block;
+  }
+}
 
 @media(min-width: 600px) and (max-width: 899px) {
   .edl-footer__body {
